# video-encoder-decoder

./: .gitignore  CMakeLists.txt  README.md  main.cpp  sampleBlocks.txt  test.ppm
Eigen/src/LU/: FullPivLU.h
Image/: Image.cpp  Image.hpp  PixelConverter.cpp  PixelConverter.hpp  RgbPixel.cpp  YCbCrPixel.hpp
ImageUtils/: Image.cpp  Image.hpp  PixelConverter.hpp  RgbPixel.hpp  YCbCrPixel.cpp
blocksOut/: UBlock.txt  VBlock.txt  YBlock.txt  decoded.txt  original.txt
blocksOut/DCT/: afterDCT  afterIDCT  beforeDCT  decoded.ppm
encodingUtils/: AcCoefficient.hpp  Block.cpp  Block.hpp  DcCoefficient.hpp
